--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kaspa-wallet-tools"
+name = "kaspa-wallet-recovery"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,3 +11,5 @@ kaspa-utils = "*"
 kaspa-addresses = "*"
 workflow-core = "*"
 hmac="*"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
