--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
         profile: minimal
         toolchain: stable
         override: true
+    - name: Set up rust
+      run: rustup target add x86_64-apple-darwin
 
     - name: Build for macOS (x86_64)
       run: cargo build --release --target x86_64-apple-darwin
